# PDFTranslate

./: .gitignore  PDFMathTranslate-fashion-translation-plan.md  PDFTranslate-GitHub-First-Commit-Checklist.md  README.md
.github/workflows/: fashion-release.yml
BabelDOC/: .gitignore  README.md  mkdocs.yml  pyproject.toml
BabelDOC/babeldoc/: const.py  main.py
BabelDOC/docs/: CONTRIBUTING.md  README.md
PDFMathTranslate-next/: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
PDFMathTranslate-next/config/: distribution.toml  fashion-customer-glossary-template.csv
PDFMathTranslate-next/examples/: fashion-customer-glossary-template.csv  fashion-online-high-quality.toml
PDFMathTranslate-next/pdf2zh_next/: __init__.py  const.py  fashion_defaults.py  gui.py  gui_translation.yaml  high_level.py  http_api.py  main.py  output_cleanup.py
PDFMathTranslate-next/script/: Dockerfile.China  Dockerfile.Demo  build_fashion_docker.ps1  build_fashion_portable.ps1  fashion_portable_quickstart.txt  setup.bat
PDFMathTranslate-next/src-tauri/: Cargo.toml  tauri.conf.json
PDFMathTranslate-next/src-tauri/icons/: icon.icns
PDFMathTranslate-next/src-tauri/src/: main.rs
PDFMathTranslate-next/tests/: test_deepseek_thinking_mode.py  test_fashion_defaults.py  test_gui_deepseek_thinking_mode.py  test_gui_fashion_customization.py  test_gui_release_blockers.py  test_http_api.py  test_output_cleanup.py  test_webui_fashion_customization.py  test_webui_release_blockers.py
PDFMathTranslate-next/web/: index.html  package-lock.json  package.json  vite.config.js  (+2 more)
(+185 files in other folders)
