[package]
name = "pdftranslate-desktop"
version = "0.1.0"
description = "PDFTranslate desktop shell"
authors = ["PDFTranslate"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
ureq = "2.10"
